Suppress compiler warnings https://bugs.webkit.org/show_bug.cgi?id=213034

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2020-06-15
Reviewed by Darin Adler.

Source/WebCore:

Use PRIu64 formatter for uint64_t instead of %llu.

No functional changes.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::putOrAdd):

Source/WebKit:

Convert to std:size_t to compare equal data types.

* NetworkProcess/cache/NetworkCacheData.cpp:
(WebKit::NetworkCache::readOrMakeSalt):

Canonical link: https://commits.webkit.org/225979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263041 268f45cc-cd09-0410-ab3c-d52691b4dbfc